# ez-common

./: CMakeLists.txt
cmake/: define_build_profile.cmake
